--- a/templates/share.html
+++ b/templates/share.html
@@ -40,7 +40,7 @@
                class="weui-footer__link weui-wa-hotarea" style="color:#576b95; margin: 0 8px 0 0;">Video</a>
             {{if not .Raw}}
             <a href="?raw=true"
-               class="weui-footer__link weui-wa-hotarea" style="color:#576b95; margin: 0 8px 0 0;">Subtitle</a>
+               class="weui-footer__link weui-wa-hotarea" style="color:#576b95; margin: 0 8px 0 0;">Timeline</a>
             {{end}}
         </p>
     </div>
