fix default env value

--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
             var url = document.getElementById('js_input2').value;
             var alias = document.getElementById('js_input3').value;
             var token = document.getElementById('js_input4').value;
-            var env = ""
+            var env = []
             var lang = document.getElementById('js_input6').value;
 
             if ( document.getElementById('js_input5').value.trim() !== "") {
