service html templates dark style

--- a/templates/share.html
+++ b/templates/share.html
@@ -12,8 +12,8 @@
 <style>
     @media (prefers-color-scheme: dark) {
         body {
-            background: #111;
-            color: #fff;
+            background: #191919;
+            color: #4c4c4c;
         }
     }
 
