--- a/templates/share.html
+++ b/templates/share.html
@@ -13,7 +13,7 @@
     @media (prefers-color-scheme: dark) {
         body {
             background: #191919;
-            color: #4c4c4c;
+            color: #bdc1c6;
         }
     }
 
