--- a/templates/share.html
+++ b/templates/share.html
@@ -45,7 +45,7 @@
         </p>
     </div>
     <div class="page__bd page__bd_spacing"
-         style="width: 100%; {{if not .Raw}}text-indent:2em;{{end}} margin-top: 30px;">
+         style="width: 100%; {{if not .Raw}}text-indent:2em;{{end}}">
         {{range .Content}}
             {{if .}}
                 <p style="padding-top: 23px; " class="monospace">{{. | safeHTML}}</p>
